--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,8 +48,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageButton
-            android:background="@null"
+        <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_row="0"
@@ -58,53 +57,133 @@
             android:layout_columnWeight="1"
             android:layout_gravity="fill"
             android:layout_margin="12dp"
-            android:adjustViewBounds="true"
+            android:scaleType="fitCenter"
+            app:cardCornerRadius="50px"
             android:onClick="onDrinkClick"
-            android:scaleType="fitCenter"
-            android:src="@drawable/drink" />
+            android:adjustViewBounds="true">
+            <LinearLayout
+                android:layout_gravity="fill"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
+                android:orientation="vertical"
+                android:layout_columnWeight="1">
+                <ImageView
+                    android:src="@drawable/drink"
+                    android:layout_centerHorizontal="true"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.8"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_margin="12dp"
+                    android:text="Drink"
+                    android:textAlignment="center"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
 
-        <ImageButton
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_row="0"
-            android:background="@null"
-            android:layout_column="1"
+        <androidx.cardview.widget.CardView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_row="0"
+        android:layout_rowWeight="1"
+        android:layout_column="1"
+        android:layout_columnWeight="1"
+        android:layout_gravity="fill"
+        android:layout_margin="12dp"
+        android:scaleType="fitCenter"
+        app:cardCornerRadius="50dp"
+        android:onClick="onDrinkClick"
+        android:adjustViewBounds="true">
+        <LinearLayout
             android:layout_gravity="fill"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:layout_rowWeight="1"
-            android:layout_columnWeight="1"
-            android:layout_margin="12dp"
-            android:scaleType="fitCenter"
-            android:src="@drawable/snacks"
-            android:adjustViewBounds="true"
-            />
-        <ImageButton
+            android:orientation="vertical"
+            android:layout_columnWeight="1">
+            <ImageView
+                android:src="@drawable/snacks"
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="0.8"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_margin="12dp"
+                android:text="Snacks"
+                android:textAlignment="center"
+                android:layout_height="wrap_content" />
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_row="1"
-            android:background="@null"
+            android:layout_rowWeight="1"
             android:layout_column="0"
-            android:layout_gravity="fill"
-            android:layout_rowWeight="1"
             android:layout_columnWeight="1"
+            android:layout_gravity="fill"
             android:layout_margin="12dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/food"
-            android:adjustViewBounds="true"
-            />
-        <ImageButton
+            app:cardCornerRadius="50dp"
+            android:onClick="onDrinkClick"
+            android:adjustViewBounds="true">
+            <LinearLayout
+                android:layout_gravity="fill"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
+                android:orientation="vertical"
+                android:layout_columnWeight="1">
+                <ImageView
+                    android:src="@drawable/food"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.8"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_margin="12dp"
+                    android:text="Foods"
+                    android:textAlignment="center"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:background="@null"
             android:layout_row="1"
-            android:layout_column="1"
-            android:layout_gravity="fill"
             android:layout_rowWeight="1"
+            android:layout_column="1"
             android:layout_columnWeight="1"
+            android:layout_gravity="fill"
             android:layout_margin="12dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/topup"
-            android:adjustViewBounds="true"
-            />
+            app:cardCornerRadius="50dp"
+            android:onClick="onDrinkClick"
+            android:adjustViewBounds="true">
+            <LinearLayout
+                android:layout_gravity="fill"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_rowWeight="1"
+                android:orientation="vertical"
+                android:layout_columnWeight="1">
+                <ImageView
+                    android:src="@drawable/topup"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.8"/>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_margin="12dp"
+                    android:text="Top Up"
+                    android:textAlignment="center"
+                    android:layout_height="wrap_content" />
+            </LinearLayout>
+        </androidx.cardview.widget.CardView>
     </GridLayout>
 
 
