--- a/app/src/main/res/layout/activity_nearby.xml
+++ b/app/src/main/res/layout/activity_nearby.xml
@@ -14,7 +14,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/background_top">
-
         <TextView
             android:layout_marginTop="12dp"
             android:id="@+id/title"
@@ -24,26 +23,15 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <LinearLayout
-            android:id="@+id/linearBtn"
             android:layout_width="match_parent"
             android:orientation="horizontal"
             android:gravity="end"
             android:layout_marginVertical="24dp"
             android:layout_marginHorizontal="12dp"
             android:layout_height="50dp">
-            <ImageButton
-                android:id="@+id/payNowBtn"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:background="@null"
-                android:textAlignment="center"
-                android:scaleType="fitXY"
-                android:src="@drawable/paynow"
-                android:adjustViewBounds="true"
-                />
         </LinearLayout>
     </LinearLayout>
-    
+
     <LinearLayout
         android:layout_marginHorizontal="12dp"
         android:layout_marginTop="24dp"
@@ -51,44 +39,16 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:orientation="horizontal"
-            android:gravity="end"
-            android:layout_height="wrap_content">
-            <Button
-                android:id="@+id/topUpOrderBtn"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="12dp"
-                android:background="@color/colorPrimaryDark"
-                android:padding="8dp"
-                android:text="Top Up"
-                android:textAlignment="center"
-                android:textColor="@color/colorPrimary" />
-        </LinearLayout>
-
         <TextView
-            android:id="@+id/balancePay"
-            android:text="Balance"
-            android:textSize="28sp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-        <TextView
-            android:id="@+id/totalLbl"
-            android:text="Total"
+            android:text="Nearby Restaurant"
             android:textSize="28sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/myOrderRv"
+            android:id="@+id/nearbyRv"
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
-
     </LinearLayout>
-
-
-
 
 </RelativeLayout>
